--- a/forecast/templates/base.html
+++ b/forecast/templates/base.html
@@ -20,63 +20,20 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <div class="container p-5">
+        <div class="container p-1 md:p-5 mx-auto">
 			{% block content %}{% endblock content %}
             
-		<!--footer-->
-        <div class="flex justify-center items-center m-10 p-5 border-y-4 border-yellow-400" >
-			<h4 class="inline-flex justify-center items-center text-lg font-semibold">Made with <svg class="h-5 w-5 text-red-600 mx-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6">
-				<path d="M11.645 20.91l-.007-.003-.022-.012a15.247 15.247 0 01-.383-.218 25.18 25.18 0 01-4.244-3.17C4.688 15.36 2.25 12.174 2.25 8.25 2.25 5.322 4.714 3 7.688 3A5.5 5.5 0 0112 5.052 5.5 5.5 0 0116.313 3c2.973 0 5.437 2.322 5.437 5.25 0 3.925-2.438 7.111-4.739 9.256a25.175 25.175 0 01-4.244 3.17 15.247 15.247 0 01-.383.219l-.022.012-.007.004-.003.001a.752.752 0 01-.704 0l-.003-.001z" />
-			  </svg>
-			  by <a href="https://www.github.com/rewatevijaykumar" class="mx-1">Vijaykumar Rewate</a></h4>
-		</div>
-        
-    </div>
-    <script>
-        // Global parameters:
-// do not resize the chart canvas when its container does (keep at 600x400px)
-Chart.defaults.global.responsive = false;
- 
-// define the chart data
-var chartData = {
-labels : [{% for item in labels %}
-"{{item}}",
-{% endfor %}],
-datasets : [{
-label: '{{ legend }}',
-fill: true,
-lineTension: 0.1,
-backgroundColor: "#fef9c3",
-borderColor: "#facc15",
-borderCapStyle: 'butt',
-borderDash: [],
-borderDashOffset: 0.0,
-borderJoinStyle: 'miter',
-pointBorderColor: "#facc15",
-pointBackgroundColor: "#fff",
-pointBorderWidth: 1,
-pointHoverRadius: 5,
-pointHoverBackgroundColor: "#facc15",
-pointHoverBorderColor: "#a16207",
-pointHoverBorderWidth: 2,
-pointRadius: 1,
-pointHitRadius: 10,
-data : [{% for item in values %}
-{{item}},
-{% endfor %}],
-spanGaps: false
-}]
-}
- 
-// get chart canvas
-var ctx = document.getElementById("myChart").getContext("2d");
- 
-// create the chart using the chart canvas
-var myChart = new Chart(ctx, {
-type: 'line',
-data: chartData,
-});
-    </script>
+            <!--footer-->
+            <div class="w-full mx-auto container">
+            <div class="flex justify-center items-center m-1 md:m-10 p-2 md:p-5 border-y-4 border-yellow-400" >
+                <h4 class="inline-flex justify-center items-center text-lg font-semibold">Made with <svg class="h-5 w-5 text-red-600 mx-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6">
+                    <path d="M11.645 20.91l-.007-.003-.022-.012a15.247 15.247 0 01-.383-.218 25.18 25.18 0 01-4.244-3.17C4.688 15.36 2.25 12.174 2.25 8.25 2.25 5.322 4.714 3 7.688 3A5.5 5.5 0 0112 5.052 5.5 5.5 0 0116.313 3c2.973 0 5.437 2.322 5.437 5.25 0 3.925-2.438 7.111-4.739 9.256a25.175 25.175 0 01-4.244 3.17 15.247 15.247 0 01-.383.219l-.022.012-.007.004-.003.001a.752.752 0 01-.704 0l-.003-.001z" />
+                </svg>
+                by <a href="https://www.github.com/rewatevijaykumar" class="mx-1">Vijaykumar Rewate</a></h4>
+            </div>
+        </div>
+        </div>
+    {% block extra_script %}{% endblock  %}
     </body>
 </html>
 
