--- a/forecast/templates/forecast/home.html
+++ b/forecast/templates/forecast/home.html
@@ -1,30 +1,29 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="flex justify-center items-center m-5 bg-yellow-300 py-10 w-full">
-    <h1 class="text-5xl font-semibold uppercase text-center">Forecasting Deployment Using Django</h1>
+
+    <div class="flex justify-center items-center m-1 md:m-5 bg-yellow-300 py-4 md:py-10 w-full">
+        <h1 class="text-2xl md:text-5xl font-bold text-black uppercase text-center">Forecasting Deployment Using Django</h1>
     </div>
-    <div class="flex justify-center items-center p-5 w-full">
-        <h1 class="text-4xl font-bold text-yellow-800 underline underline-offset-4">
+    <div class="flex justify-center items-center p-4 md:p-5 w-full">
+        <h1 class="text-xl md:text-4xl font-bold text-yellow-800 underline underline-offset-4">
             Gold Price Prediction
         </h1>
     </div>
     <div class="flex flex-col justify-center items-center mx-auto"> 
-        <form class="flex flex-col w-1/2 justify-center p-2 items-center rounded-lg shadow-lg bg-yellow-300 m-5" action="/predict" method='POST'>
+        <form class="my-5 flex flex-col lg:w-1/2 justify-center py-3 px-2 items-center rounded-lg shadow-lg bg-yellow-300 md:m-5" action="/predict" method='POST'>
             {% csrf_token %}
-            <div class="relative flex justify-center items-center pt-1">
-                <label for="customRange2" class="form-label text-lg mr-4">Enter Forecast Period: </label>
-                <input type="text" name="days" class="form-control bg-white rounded-lg p-2" placeholder="1 to 365 days">
+            <div class="relative flex flex-col space-y-2 md:flex-row justify-center items-center pt-1">
+                <label for="customRange2" class="form-label text-center text-lg md:mr-4">Enter Forecast Period: </label>
+                <input type="text" name="days" class="form-control placeholder:text-center md:placeholder:text-left bg-white rounded-lg md:p-2" placeholder="1 to 365 days">
                 
-                <button type="submit" class="bg-yellow-700 hover:bg-yellow-600 text-white font-bold text-lg px-3 py-2 ml-4 rounded-lg">Forecast</button>
+                <button type="submit" class="bg-yellow-700 hover:bg-yellow-600 text-white font-bold text-lg px-3 py-2 md:ml-4 rounded-lg">Forecast</button>
             </div>
         </form>
         {% if error %}
-            <div class="flex mx-auto bg-red-100 rounded-lg p-4 w-1/2 mb-4 text-sm text-red-700" role="alert">
-                <svg class="w-5 h-5 inline mr-3" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z" clip-rule="evenodd"></path></svg>
-                <div class="text-lg">
-                    <span class="font-medium">Alert!</span> {{error}}
-                </div>
+            <div class="flex mx-auto bg-red-100 rounded-lg p-4 lg:w-1/2 mb-4 text-sm md:text-lg text-red-700" role="alert">
+                <svg class="w-5 h-5 inline mr-3 shrink-0" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z" clip-rule="evenodd"></path></svg>
+                    <span class="font-medium mr-1">Alert!</span> {{error}}
             </div>
         {% endif %}
     </div>
@@ -67,3 +66,53 @@
         {% endif %}
     </div>
 {% endblock content %}
+
+{% block extra_script %}
+{% if data %}
+    <script>
+        // Global parameters:
+    // do not resize the chart canvas when its container does (keep at 600x400px)
+    Chart.defaults.global.responsive = false;
+
+    // define the chart data
+    var chartData = {
+    labels : [{% for item in labels %}
+    "{{item}}",
+    {% endfor %}],
+    datasets : [{
+    label: '{{ legend }}',
+    fill: true,
+    lineTension: 0.1,
+    backgroundColor: "#fef9c3",
+    borderColor: "#facc15",
+    borderCapStyle: 'butt',
+    borderDash: [],
+    borderDashOffset: 0.0,
+    borderJoinStyle: 'miter',
+    pointBorderColor: "#facc15",
+    pointBackgroundColor: "#fff",
+    pointBorderWidth: 1,
+    pointHoverRadius: 5,
+    pointHoverBackgroundColor: "#facc15",
+    pointHoverBorderColor: "#a16207",
+    pointHoverBorderWidth: 2,
+    pointRadius: 1,
+    pointHitRadius: 10,
+    data : [{% for item in values %}
+    {{item}},
+    {% endfor %}],
+    spanGaps: false
+    }]
+    }
+
+    // get chart canvas
+    var ctx = document.getElementById("myChart").getContext("2d");
+
+    // create the chart using the chart canvas
+    var myChart = new Chart(ctx, {
+    type: 'line',
+    data: chartData,
+    });
+    </script>
+    {% endif %}
+{% endblock extra_script %}
