--- a/forecast/templates/forecast/home.html
+++ b/forecast/templates/forecast/home.html
@@ -30,8 +30,8 @@
 
     {% if data %}
     <div class="flex flex-col justify-center items-center">
-        <canvas id="myChart" width="600" height="600"></canvas>
-        <div class="overflow-x-auto  w-1/2 my-5">
+        <canvas id="myChart" class="w-full h-full"></canvas>
+        <div class="overflow-x-auto  max-w-xl my-5">
             <table class="table-auto w-full border border-yellow-400">
             <thead class="border-b">
                 <tr class="bg-yellow-100">
