--- a/forecast/templates/base.html
+++ b/forecast/templates/base.html
@@ -21,7 +21,7 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <div class="flex justify-center items-center bg-yellow-300 p-4 md:py-10 w-full">
-            <h1 class="text-2xl md:text-5xl font-bold text-black uppercase text-center">Forecasting Deployment Using Flask</h1>
+            <h1 class="text-2xl md:text-5xl font-bold text-black uppercase text-center">Forecasting Deployment Using Django</h1>
         </div>
         <div class="container p-1 md:p-5 mx-auto">
 			{% block content %}{% endblock content %}
